--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,20 @@
     <!--[if lt IE 9]>
     <script src="js/respond.min.js"></script>
     <![endif]-->
-    
-    <title>Hello!!</title>
+
+    <link rel="icon" href="https://img.icons8.com/material/24/000000/user-female.png">
+
+    <!-- Google site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110389050-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-110389050-1');
+    </script>
+
+    <title>Kiara Contreras | Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
